--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "devDependencies": {
     "@types/node": "^18.15.11",
     "typescript": "^5.0.4",
-    "vitest": "^0.30.1"
+    "vitest": "^0.30.1",
+    "vite-tsconfig-paths": "^4.2.0"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.7"
   }
 }
